--- a/index.html
+++ b/index.html
@@ -10,128 +10,128 @@
     <div class="wrapper">
       <div class="row">
         <div>
-
+          <p></p>
         </div>
         <div>
-
+          <p></p>
         </div>
         <div>
-
+          <p></p>
         </div>
         <div>
-
+          <p></p>
         </div>
         <div>
-
+          <p></p>
         </div>
         <div>
-
-        </div>
-      </div>
-      <div class="row">
-        <div>
-
-        </div>
-        <div>
-
-        </div>
-        <div>
-
-        </div>
-        <div>
-
-        </div>
-        <div>
-
-        </div>
-        <div>
-
+          <p></p>
         </div>
       </div>
       <div class="row">
         <div>
-
+          <p></p>
         </div>
         <div>
-
+          <p></p>
         </div>
         <div>
-
+          <p></p>
         </div>
         <div>
-
+          <p></p>
         </div>
         <div>
-
+          <p></p>
         </div>
         <div>
-
-        </div>
-      </div>
-      <div class="row">
-        <div>
-
-        </div>
-        <div>
-
-        </div>
-        <div>
-
-        </div>
-        <div>
-
-        </div>
-        <div>
-
-        </div>
-        <div>
-
+          <p></p>
         </div>
       </div>
       <div class="row">
         <div>
-
+          <p></p>
         </div>
         <div>
-
+          <p></p>
         </div>
         <div>
-
+          <p></p>
         </div>
         <div>
-
+          <p></p>
         </div>
         <div>
-
+          <p></p>
         </div>
         <div>
-
+          <p></p>
         </div>
       </div>
       <div class="row">
         <div>
-
+          <p></p>
         </div>
         <div>
-
+          <p></p>
         </div>
         <div>
-
+          <p></p>
         </div>
         <div>
-
+          <p></p>
         </div>
         <div>
-
+          <p></p>
         </div>
         <div>
-
+          <p></p>
+        </div>
+      </div>
+      <div class="row">
+        <div>
+          <p></p>
+        </div>
+        <div>
+          <p></p>
+        </div>
+        <div>
+          <p></p>
+        </div>
+        <div>
+          <p></p>
+        </div>
+        <div>
+          <p></p>
+        </div>
+        <div>
+          <p></p>
+        </div>
+      </div>
+      <div class="row">
+        <div>
+          <p></p>
+        </div>
+        <div>
+          <p></p>
+        </div>
+        <div>
+          <p></p>
+        </div>
+        <div>
+          <p></p>
+        </div>
+        <div>
+          <p></p>
+        </div>
+        <div>
+          <p></p>
         </div>
       </div>
     </div>
 
 
-
-    <script src="assets/js/style.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="assets/js/main.js"></script>
   </body>
 </html>
