--- a/bonus/index.html
+++ b/bonus/index.html
@@ -8,129 +8,33 @@
   <body>
 
     <div class="wrapper">
-      <div class="row">
-        <div>
-          <p></p>
-        </div>
-        <div>
-          <p></p>
-        </div>
-        <div>
-          <p></p>
-        </div>
-        <div>
-          <p></p>
-        </div>
-        <div>
-          <p></p>
-        </div>
-        <div>
-          <p></p>
-        </div>
-      </div>
-      <div class="row">
-        <div>
-          <p></p>
-        </div>
-        <div>
-          <p></p>
-        </div>
-        <div>
-          <p></p>
-        </div>
-        <div>
-          <p></p>
-        </div>
-        <div>
-          <p></p>
-        </div>
-        <div>
-          <p></p>
-        </div>
-      </div>
-      <div class="row">
-        <div>
-          <p></p>
-        </div>
-        <div>
-          <p></p>
-        </div>
-        <div>
-          <p></p>
-        </div>
-        <div>
-          <p></p>
-        </div>
-        <div>
-          <p></p>
-        </div>
-        <div>
-          <p></p>
-        </div>
-      </div>
-      <div class="row">
-        <div>
-          <p></p>
-        </div>
-        <div>
-          <p></p>
-        </div>
-        <div>
-          <p></p>
-        </div>
-        <div>
-          <p></p>
-        </div>
-        <div>
-          <p></p>
-        </div>
-        <div>
-          <p></p>
-        </div>
-      </div>
-      <div class="row">
-        <div>
-          <p></p>
-        </div>
-        <div>
-          <p></p>
-        </div>
-        <div>
-          <p></p>
-        </div>
-        <div>
-          <p></p>
-        </div>
-        <div>
-          <p></p>
-        </div>
-        <div>
-          <p></p>
-        </div>
-      </div>
-      <div class="row">
-        <div>
-          <p></p>
-        </div>
-        <div>
-          <p></p>
-        </div>
-        <div>
-          <p></p>
-        </div>
-        <div>
-          <p></p>
-        </div>
-        <div>
-          <p></p>
-        </div>
-        <div>
-          <p></p>
-        </div>
-      </div>
+
     </div>
 
+    <script id="hb-template" type="text/x-handlebars-template">
+      <div class="row" >
+        <div>
+          <p></p>
+        </div>
+        <div>
+          <p></p>
+        </div>
+        <div>
+          <p></p>
+        </div>
+        <div>
+          <p></p>
+        </div>
+        <div>
+          <p></p>
+        </div>
+        <div>
+          <p></p>
+        </div>
+      </div>
+    </script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.4.2/handlebars.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="assets/js/main.js"></script>
   </body>
